[tool.poetry]
name = "python-kyla"
version = "0.0.1.dev1"
description = "Python API for Aztech Kyla Smarthome devices"
license = "GPL-3.0-or-later"
authors = ["Your Name <you@example.com>"]
repository = "https://github.com/Aztechiot/python-kyla"
readme = "README.md"
packages = [
  { include = "kyla" }
]

[tool.poetry.scripts]
kyla = "kyla.cli:cli"

[tool.poetry.dependencies]
python = "^3.7"
importlib-metadata = "*"
asyncclick = "^7"

# required only for docs
sphinx = { version = "^3", optional = true }
m2r = { version = "^0", optional = true }
sphinx_rtd_theme = { version = "^0", optional = true }
sphinxcontrib-programoutput = { version = "^0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^5"
pytest-azurepipelines = "^0"
pytest-cov = "^2"
pytest-asyncio = "^0"
pytest-sugar = "*"
pre-commit = "*"
voluptuous = "*"
toml = "*"
tox = "*"
pytest-mock = "^3"
codecov = "^2"
xdoctest = "^0"

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme", "m2r", "sphinxcontrib-programoutput"]


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_first_party = "kyla"
known_third_party = ["asyncclick", "pytest", "setuptools", "voluptuous"]

[tool.coverage.run]
source = ["kyla"]
branch = true
omit = ["kyla/tests/*"]

[tool.coverage.report]
exclude_lines = [
  # ignore abstract methods
  "raise NotImplementedError",
  "def __repr__"
]

[tool.interrogate]
ignore-init-method = true
ignore-magic = true
ignore-private = true
ignore-semiprivate = true
fail-under = 100
exclude = ['kyla/tests/*']
verbose = 2

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
